SimpleRuleEngine/Console.App/obj/Debug/RuleSetParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:\Learnings\ANTLR\RulesEvaluator\SimpleRuleEngine\Console.App\Grammar\RuleSet.g4 by ANTLR 4.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace Console.App.Grammar {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.3")]
[System.CLSCompliant(false)]
public partial class RuleSetParser : Parser {
	public const int
		T__41=1, T__40=2, T__39=3, T__38=4, T__37=5, T__36=6, T__35=7, T__34=8, 
		T__33=9, T__32=10, T__31=11, T__30=12, T__29=13, T__28=14, T__27=15, T__26=16, 
		T__25=17, T__24=18, T__23=19, T__22=20, T__21=21, T__20=22, T__19=23, 
		T__18=24, T__17=25, T__16=26, T__15=27, T__14=28, T__13=29, T__12=30, 
		T__11=31, T__10=32, T__9=33, T__8=34, T__7=35, T__6=36, T__5=37, T__4=38, 
		T__3=39, T__2=40, T__1=41, T__0=42, INT=43, NUMERIC_VALUE=44, IDENTIFIER=45, 
		RULECOMMENT=46, NEWLINE=47, WS=48;
	public static readonly string[] tokenNames = {
		"<INVALID>", "']'", "')]'", "','", "'-'", "'*'", "' less than '", "'or'", 
		"'['", "'not'", "'('", "') greater than ('", "'<'", "') less than ('", 
		"'is true'", "'@.'", "'''", "'==''", "'includes one'", "'@.length-'", 
		"'is false'", "'and'", "'equals'", "' less than ('", "'contains'", "' equals '", 
		"'[]'", "' greater than '", "')'", "'.'", "'+'", "'$.'", "'[*]'", "' greater than ('", 
		"'&&'", "'[?('", "'||'", "'>'", "'SUM('", "') greater than '", "'/'", 
		"'=='", "') less than '", "INT", "NUMERIC_VALUE", "IDENTIFIER", "RULECOMMENT", 
		"NEWLINE", "WS"
	};
	public const int
		RULE_rule_set = 0, RULE_single_rule = 1, RULE_logical_expr = 2, RULE_specification_expr = 3, 
		RULE_left_arithmetic_expr = 4, RULE_right_arithmetic_expr = 5, RULE_arithmetic_expr = 6, 
		RULE_numeric_expr = 7, RULE_value_expr = 8, RULE_total_expr = 9, RULE_jsonpath_expr = 10, 
		RULE_jsonpath_dotnotation_expr = 11, RULE_dotnotation_expr = 12, RULE_identifierWithQualifier = 13, 
		RULE_query_expr = 14, RULE_string_comparison_value = 15, RULE_string_array = 16;
	public static readonly string[] ruleNames = {
		"rule_set", "single_rule", "logical_expr", "specification_expr", "left_arithmetic_expr", 
		"right_arithmetic_expr", "arithmetic_expr", "numeric_expr", "value_expr", 
		"total_expr", "jsonpath_expr", "jsonpath_dotnotation_expr", "dotnotation_expr", 
		"identifierWithQualifier", "query_expr", "string_comparison_value", "string_array"
	};

	public override string GrammarFileName { get { return "RuleSet.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public RuleSetParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class Rule_setContext : ParserRuleContext {
		public IReadOnlyList<ITerminalNode> NEWLINE() { return GetTokens(RuleSetParser.NEWLINE); }
		public ITerminalNode Eof() { return GetToken(RuleSetParser.Eof, 0); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(RuleSetParser.NEWLINE, i);
		}
		public Single_ruleContext single_rule(int i) {
			return GetRuleContext<Single_ruleContext>(i);
		}
		public IReadOnlyList<Single_ruleContext> single_rule() {
			return GetRuleContexts<Single_ruleContext>();
		}
		public Rule_setContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_rule_set; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.EnterRule_set(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.ExitRule_set(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRuleSetVisitor<TResult> typedVisitor = visitor as IRuleSetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRule_set(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Rule_setContext rule_set() {
		Rule_setContext _localctx = new Rule_setContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_rule_set);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34; single_rule();
			State = 39;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==NEWLINE) {
				{
				{
				State = 35; Match(NEWLINE);
				State = 36; single_rule();
				}
				}
				State = 41;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 42; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Single_ruleContext : ParserRuleContext {
		public Logical_exprContext logical_expr() {
			return GetRuleContext<Logical_exprContext>(0);
		}
		public ITerminalNode RULECOMMENT() { return GetToken(RuleSetParser.RULECOMMENT, 0); }
		public Single_ruleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_single_rule; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.EnterSingle_rule(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.ExitSingle_rule(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRuleSetVisitor<TResult> typedVisitor = visitor as IRuleSetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSingle_rule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Single_ruleContext single_rule() {
		Single_ruleContext _localctx = new Single_ruleContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_single_rule);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44; logical_expr(0);
			State = 46;
			_la = _input.La(1);
			if (_la==RULECOMMENT) {
				{
				State = 45; Match(RULECOMMENT);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Logical_exprContext : ParserRuleContext {
		public Logical_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_logical_expr; } }
	 
		public Logical_exprContext() { }
		public virtual void CopyFrom(Logical_exprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class LogicalExpressionNotContext : Logical_exprContext {
		public Logical_exprContext logical_expr() {
			return GetRuleContext<Logical_exprContext>(0);
		}
		public LogicalExpressionNotContext(Logical_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.EnterLogicalExpressionNot(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.ExitLogicalExpressionNot(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRuleSetVisitor<TResult> typedVisitor = visitor as IRuleSetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogicalExpressionNot(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LogicalExpressionAndContext : Logical_exprContext {
		public IReadOnlyList<Logical_exprContext> logical_expr() {
			return GetRuleContexts<Logical_exprContext>();
		}
		public Logical_exprContext logical_expr(int i) {
			return GetRuleContext<Logical_exprContext>(i);
		}
		public LogicalExpressionAndContext(Logical_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.EnterLogicalExpressionAnd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.ExitLogicalExpressionAnd(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRuleSetVisitor<TResult> typedVisitor = visitor as IRuleSetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogicalExpressionAnd(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class LogicalExpressionOrContext : Logical_exprContext {
		public IReadOnlyList<Logical_exprContext> logical_expr() {
			return GetRuleContexts<Logical_exprContext>();
		}
		public Logical_exprContext logical_expr(int i) {
			return GetRuleContext<Logical_exprContext>(i);
		}
		public LogicalExpressionOrContext(Logical_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.EnterLogicalExpressionOr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.ExitLogicalExpressionOr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRuleSetVisitor<TResult> typedVisitor = visitor as IRuleSetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogicalExpressionOr(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class SpecificationExpressionContext : Logical_exprContext {
		public Specification_exprContext specification_expr() {
			return GetRuleContext<Specification_exprContext>(0);
		}
		public SpecificationExpressionContext(Logical_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.EnterSpecificationExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.ExitSpecificationExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRuleSetVisitor<TResult> typedVisitor = visitor as IRuleSetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSpecificationExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Logical_exprContext logical_expr() {
		return logical_expr(0);
	}

	private Logical_exprContext logical_expr(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		Logical_exprContext _localctx = new Logical_exprContext(_ctx, _parentState);
		Logical_exprContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_logical_expr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 52;
			switch (_input.La(1)) {
			case T__33:
				{
				_localctx = new LogicalExpressionNotContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				State = 49; Match(T__33);
				State = 50; logical_expr(2);
				}
				break;
			case T__32:
			case T__11:
			case T__4:
			case INT:
			case NUMERIC_VALUE:
			case IDENTIFIER:
				{
				_localctx = new SpecificationExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				State = 51; specification_expr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.Lt(-1);
			State = 62;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 60;
					switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new LogicalExpressionAndContext(new Logical_exprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_logical_expr);
						State = 54;
						if (!(Precpred(_ctx, 4))) throw new FailedPredicateException(this, "Precpred(_ctx, 4)");
						State = 55; Match(T__21);
						State = 56; logical_expr(5);
						}
						break;

					case 2:
						{
						_localctx = new LogicalExpressionOrContext(new Logical_exprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_logical_expr);
						State = 57;
						if (!(Precpred(_ctx, 3))) throw new FailedPredicateException(this, "Precpred(_ctx, 3)");
						State = 58; Match(T__35);
						State = 59; logical_expr(4);
						}
						break;
					}
					} 
				}
				State = 64;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class Specification_exprContext : ParserRuleContext {
		public Specification_exprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_specification_expr; } }
	 
		public Specification_exprContext() { }
		public virtual void CopyFrom(Specification_exprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class NumericEqualComparisonSpecificationExpressionContext : Specification_exprContext {
		public IReadOnlyList<Numeric_exprContext> numeric_expr() {
			return GetRuleContexts<Numeric_exprContext>();
		}
		public Numeric_exprContext numeric_expr(int i) {
			return GetRuleContext<Numeric_exprContext>(i);
		}
		public NumericEqualComparisonSpecificationExpressionContext(Specification_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.EnterNumericEqualComparisonSpecificationExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.ExitNumericEqualComparisonSpecificationExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRuleSetVisitor<TResult> typedVisitor = visitor as IRuleSetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumericEqualComparisonSpecificationExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NumericLessThanComparisonSpecificationExpressionContext : Specification_exprContext {
		public IReadOnlyList<Numeric_exprContext> numeric_expr() {
			return GetRuleContexts<Numeric_exprContext>();
		}
		public Left_arithmetic_exprContext left_arithmetic_expr() {
			return GetRuleContext<Left_arithmetic_exprContext>(0);
		}
		public Numeric_exprContext numeric_expr(int i) {
			return GetRuleContext<Numeric_exprContext>(i);
		}
		public Right_arithmetic_exprContext right_arithmetic_expr() {
			return GetRuleContext<Right_arithmetic_exprContext>(0);
		}
		public NumericLessThanComparisonSpecificationExpressionContext(Specification_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.EnterNumericLessThanComparisonSpecificationExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.ExitNumericLessThanComparisonSpecificationExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRuleSetVisitor<TResult> typedVisitor = visitor as IRuleSetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumericLessThanComparisonSpecificationExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BooleanIsFalseComparisonSpecificationExpressionContext : Specification_exprContext {
		public Value_exprContext value_expr() {
			return GetRuleContext<Value_exprContext>(0);
		}
		public BooleanIsFalseComparisonSpecificationExpressionContext(Specification_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.EnterBooleanIsFalseComparisonSpecificationExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.ExitBooleanIsFalseComparisonSpecificationExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRuleSetVisitor<TResult> typedVisitor = visitor as IRuleSetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBooleanIsFalseComparisonSpecificationExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StringContainsComparisonSpecificationExpressionContext : Specification_exprContext {
		public String_comparison_valueContext string_comparison_value() {
			return GetRuleContext<String_comparison_valueContext>(0);
		}
		public Value_exprContext value_expr() {
			return GetRuleContext<Value_exprContext>(0);
		}
		public StringContainsComparisonSpecificationExpressionContext(Specification_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.EnterStringContainsComparisonSpecificationExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.ExitStringContainsComparisonSpecificationExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRuleSetVisitor<TResult> typedVisitor = visitor as IRuleSetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStringContainsComparisonSpecificationExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BooleanIsTrueComparisonSpecificationExpressionContext : Specification_exprContext {
		public Value_exprContext value_expr() {
			return GetRuleContext<Value_exprContext>(0);
		}
		public BooleanIsTrueComparisonSpecificationExpressionContext(Specification_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.EnterBooleanIsTrueComparisonSpecificationExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.ExitBooleanIsTrueComparisonSpecificationExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRuleSetVisitor<TResult> typedVisitor = visitor as IRuleSetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBooleanIsTrueComparisonSpecificationExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NumericGreaterThanComparisonSpecificationExpressionContext : Specification_exprContext {
		public IReadOnlyList<Numeric_exprContext> numeric_expr() {
			return GetRuleContexts<Numeric_exprContext>();
		}
		public Left_arithmetic_exprContext left_arithmetic_expr() {
			return GetRuleContext<Left_arithmetic_exprContext>(0);
		}
		public Numeric_exprContext numeric_expr(int i) {
			return GetRuleContext<Numeric_exprContext>(i);
		}
		public Right_arithmetic_exprContext right_arithmetic_expr() {
			return GetRuleContext<Right_arithmetic_exprContext>(0);
		}
		public NumericGreaterThanComparisonSpecificationExpressionContext(Specification_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.EnterNumericGreaterThanComparisonSpecificationExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.ExitNumericGreaterThanComparisonSpecificationExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRuleSetVisitor<TResult> typedVisitor = visitor as IRuleSetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumericGreaterThanComparisonSpecificationExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ArrayIncludesOneComparisonSpecificationExpressionContext : Specification_exprContext {
		public Value_exprContext value_expr() {
			return GetRuleContext<Value_exprContext>(0);
		}
		public String_arrayContext string_array() {
			return GetRuleContext<String_arrayContext>(0);
		}
		public ArrayIncludesOneComparisonSpecificationExpressionContext(Specification_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.EnterArrayIncludesOneComparisonSpecificationExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.ExitArrayIncludesOneComparisonSpecificationExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRuleSetVisitor<TResult> typedVisitor = visitor as IRuleSetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitArrayIncludesOneComparisonSpecificationExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StringEqualsComparisonSpecificationExpressionContext : Specification_exprContext {
		public String_comparison_valueContext string_comparison_value() {
			return GetRuleContext<String_comparison_valueContext>(0);
		}
		public Value_exprContext value_expr() {
			return GetRuleContext<Value_exprContext>(0);
		}
		public StringEqualsComparisonSpecificationExpressionContext(Specification_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.EnterStringEqualsComparisonSpecificationExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.ExitStringEqualsComparisonSpecificationExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRuleSetVisitor<TResult> typedVisitor = visitor as IRuleSetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStringEqualsComparisonSpecificationExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class TotalledNumericLessThanComparisonSpecificationExpressionContext : Specification_exprContext {
		public Numeric_exprContext numeric_expr() {
			return GetRuleContext<Numeric_exprContext>(0);
		}
		public Right_arithmetic_exprContext right_arithmetic_expr() {
			return GetRuleContext<Right_arithmetic_exprContext>(0);
		}
		public Jsonpath_exprContext jsonpath_expr() {
			return GetRuleContext<Jsonpath_exprContext>(0);
		}
		public TotalledNumericLessThanComparisonSpecificationExpressionContext(Specification_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.EnterTotalledNumericLessThanComparisonSpecificationExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.ExitTotalledNumericLessThanComparisonSpecificationExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRuleSetVisitor<TResult> typedVisitor = visitor as IRuleSetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTotalledNumericLessThanComparisonSpecificationExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class TotalledNumericGreaterThanComparisonSpecificationExpressionContext : Specification_exprContext {
		public Numeric_exprContext numeric_expr() {
			return GetRuleContext<Numeric_exprContext>(0);
		}
		public Right_arithmetic_exprContext right_arithmetic_expr() {
			return GetRuleContext<Right_arithmetic_exprContext>(0);
		}
		public Jsonpath_exprContext jsonpath_expr() {
			return GetRuleContext<Jsonpath_exprContext>(0);
		}
		public TotalledNumericGreaterThanComparisonSpecificationExpressionContext(Specification_exprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.EnterTotalledNumericGreaterThanComparisonSpecificationExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRuleSetListener typedListener = listener as IRuleSetListener;
			if (typedListener != null) typedListener.ExitTotalledNumericGreaterThanComparisonSpecificationExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRuleSetVisitor<TResult> typedVisitor = visitor as IRuleSetVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTotalledNumericGreaterThanComparisonSpecificationExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
